# AutoCarROS2

./: README.md  requirements.sh
launches/launch/: costmap_launch.py  default_launch.py  description_only_launch.py  localization_launch.py  mapping_launch.py  navigation_launch.py  slam_launch.py
ngeeann_av_description/: package.xml
ngeeann_av_description/rviz/: lidar_map_view.rviz  lidar_view.rviz
ngeeann_av_description/urdf/: VLP-16.urdf.xacro  ngeeann_av.sdf  ngeeann_av.urdf  ngeeann_av.xacro  xacro2sdf.bash
ngeeann_av_gazebo/: package.xml
ngeeann_av_gazebo/models/ngeeann_av/: model.sdf
ngeeann_av_gazebo/worlds/: ngeeann_av copy.world  ngeeann_av.world
ngeeann_av_map/: CMakeLists.txt  package.xml
ngeeann_av_map/include/: gridmap.h
ngeeann_av_map/src/: bof_lidar.cpp
ngeeann_av_nav/: package.xml
ngeeann_av_nav/config/: ekf.yaml  navigation_params.yaml
ngeeann_av_nav/nodes/: globalplanner.py  localisation.py  localplanner.py  tracker.py
scripts/: circle_road_gen.py
velodyne_description/: CMakeLists.txt  package.xml
velodyne_description/rviz/: example.rviz
velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
